[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/fonts/Cooper Black Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://game/debug/DebugPanels.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 1 )

[node name="DebugPanels" type="Node"]
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 1023.8 ],
"_edit_vertical_guides_": [ 20.0892 ]
}

[node name="DebugPanel1" type="TextEdit" parent="."]
margin_left = 18.2705
margin_top = 733.561
margin_right = 289.271
margin_bottom = 902.561
custom_fonts/font = SubResource( 1 )
readonly = true
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugPanel3" type="TextEdit" parent="."]
margin_left = 18.2705
margin_top = 688.54
margin_right = 289.271
margin_bottom = 731.54
custom_fonts/font = SubResource( 1 )
readonly = true
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugPanel2" type="TextEdit" parent="."]
margin_left = 18.2705
margin_top = 902.54
margin_right = 289.271
margin_bottom = 1017.54
custom_fonts/font = SubResource( 1 )
readonly = true
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}
